misc: add ENABLE_ASAN configure option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,12 @@ cmake_minimum_required(VERSION 3.10)
 
 option(ENABLE_SHARED "Whether to build shared libraries" ON)
 option(ENABLE_STATIC "Whether to build static libraries" OFF)
+option(ENABLE_ASAN "Whether to build with ASAN" OFF)
+
+if (ENABLE_ASAN)
+    add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
+    add_link_options(-fsanitize=address)
+endif()
 
 project(obos-aud C)
 
