libaustream: add stream helper library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,5 +24,6 @@ project(obos-aud C)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_subdirectory(libautrans)
+add_subdirectory(libaustream)
 add_subdirectory(src)
 add_subdirectory(test)
