misc: install libaustream, libautrans, and obos-aud targets

--- a/libaustream/CMakeLists.txt
+++ b/libaustream/CMakeLists.txt
@@ -10,8 +10,10 @@ set_property(TARGET austream_obj PROPERTY POSITION_INDEPENDENT_CODE 1)
 if (ENABLE_SHARED)
     add_library(austream_so SHARED $<TARGET_OBJECTS:austream_obj>)
     set_target_properties(austream_so PROPERTIES OUTPUT_NAME austream)
+    install(TARGETS austream_so)
 endif()
 if (ENABLE_STATIC)
     add_library(austream_sh STATIC $<TARGET_OBJECTS:austream_obj>)
     set_target_properties(austream_sh PROPERTIES OUTPUT_NAME austream)
+    install(TARGETS austream_so)
 endif()
