server: make libaustream server-internal and fix mixer bugs
This commit moves libaustream to the audio server. It also makes aud_stream_push decode sources of a different sample rate of the output device.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,11 +4,11 @@
 
 add_subdirectory(backends/${BACKEND})
 
-set(SERVER_SOURCES "server_main.c" "con.c" "mixer.c")
+set(SERVER_SOURCES "server_main.c" "con.c" "mixer.c" "stream.c")
 
 add_executable(obos-aud ${SERVER_SOURCES} $<TARGET_OBJECTS:backend_obj>)
 
-target_link_libraries(obos-aud PRIVATE autrans_so austream_so m)
+target_link_libraries(obos-aud PRIVATE autrans_so m)
 
 target_compile_definitions(obos-aud PRIVATE BUILDING_OBOS_AUD_SERVER=1)
 
