audctl: initial code for audio (server) control utility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 add_subdirectory(libautrans)
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(audctl)
 
 install(DIRECTORY include/
     DESTINATION include
